--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       You
       <span class="result-score" data-your-score>0</span>
     </div>
-    <div data-final-column>
+    <div>
       Computer
       <span class="result-score" data-computer-score>0</span>
     </div>
